1. make classes and use oops
2. limits of out of screen
3. make screen small not full size
4. gravity is not working if it is going to right in air
5. fix the top score bar
6. condition so that coin or any object should not collide with borders (upper or lower) or with player or any other object
7. take care that no objects should collide with each other (imp)
8. make coins 2d array
9. increase number of coins
10. make new file for all colors
11. check condition of removing flames
12. gravity
13. bullet is removing coins and flames
14. bullet should get removed after removing one flame