@@ -1,6 +1,8 @@
+import numpy as np
 import colorama
 from colorama import Fore, Back, Style
 colorama.init()
+
 
 class Person:
     def __init__(self, world_x, world_y):
@@ -12,7 +14,6 @@ class Person:
         self.velx = 0
         self.vely = 0
         self.gravity = 0.1
-        # self.dy = 0.0013
         self.char = [[' ', '0', ' '], ['-', '|', '-'], ['/', '|', '\\']]
         self.color = Fore.BLUE
         self.lives = 3
@@ -35,7 +36,6 @@ class Person:
             self.vely = 0
             self.pos_y += 1
 
-
     # def gravity(self):
     #     self.pos_y += 2
 
@@ -50,3 +50,44 @@ class Person:
     def change_pos(self):
         self.pos_x += round(self.velx)
         self.pos_y += round(self.vely)
+
+
+class BossEnemy:
+    def __init__(self, x, y):
+        self.color = Fore.RED
+        self.active = 1
+        self.vel_x = 2
+        self.cnt = 0
+        self.make_arr(x, y)
+
+    def make_arr(self, x, y):
+        with open('BossEnemy.txt', 'rb') as f:
+            arr = []
+            cnt = 0
+            mx = -1
+            for line in f:
+                arr.append(line)
+                mx = max(mx, len(arr[cnt]))
+                cnt += 1
+        f.close()
+        self.height = len(arr)
+        self.width = mx
+        self.pos_x = x - self.width
+        self.pos_y = y - 3
+        self.char = np.array(([[' ' for col in range(self.width)]
+                               for row in range(self.height)]))
+
+        for i in range(self.height):
+            # to remove last '\n' character in ascii art present already I have made loop till len(arr[i]) - 1
+            for j in range(len(arr[i])-1):
+                self.char[i][j] = chr(arr[i][j])
+
+    def change_pos(self, player_pos_y):
+        self.pos_y = max(player_pos_y, self.height+2)
+        self.cnt += 1
+        if self.cnt % 83 == 0:
+            self.pos_x += self.vel_x
+            if self.vel_x == 2:
+                self.vel_x = -2
+            else:
+                self.vel_x = 2
