@@ -10,5 +10,9 @@
 10. make new file for all colors
 11. check condition of removing flames
 12. gravity
-13. bullet is removing coins and flames
-14. bullet should get removed after removing one flame
+13. bullet is removing coins
+14. position of bullets
+15. inheritence
+16 . score for bulleting flame
+17. collision bw coin and flames
+18. sound
